--- a/css/wiki-layout.css
+++ b/css/wiki-layout.css
@@ -98,13 +98,23 @@ aside h2 {
 }
 
 .profile-image {
-  background-image: url("https://images.unsplash.com/photo-1618979251882-0b40ef3617f0?q=80&w=2487&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+  background-image: url("images/profile.jpg")
   background-size: 100%;
   background-position: center 100%;
   width: var(--aside-width);
   height: var(--aside-width);
 
   text-indent: -1000rem;
+  position: relative;
+}
+
+.profile-image img {
+  position: absolute;
+  top: 0;
+  left:0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 aside.right-sidebar nav {
